--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,21 +10,22 @@ dynamic = ["version"]
 
 dependencies = [
     "boto3==1.26.117",
-    "matplotlib==3.3.4",
-    "numpy==1.21.6",  # required by pyspark
-    "pandas==1.3",  # 1.3 at least needed for M1 Mac, lower version required by pyspark
+    "matplotlib==3.8",
+    "numpy==1.26",
+    "pandas==2.2.2",  # 1.3 at least needed for M1 Mac
     "pg8000==1.29.4",  # this was easier to pip install than psycopg2
     "pyarrow==15.0.2",  # don't use low versions which pin lower versions of numpy that break on M1 Mac
-    "pyspark==3.4.0",  # using this version because py37 deprecated in pyspark 3.4.0
+    "pyspark==3.4.0",
     "requests==2.31.0",
-    "scikit-learn==1.0.2",
+    "scikit-learn==1.4.2",
     "seaborn==0.11.2",
     "shap==0.41.0",
     "sqlalchemy==1.4.46",  # originally tried 2.0.10, but this was incompatible with old versions of pandas https://stackoverflow.com/a/75282604/5034651,
     "viral_reddit_posts_utils @ git+https://github.com/ViralRedditPosts/Utils.git@main",
+    "Reddit-Scraping @ git+https://github.com/ViralRedditPosts/Reddit-Scraping.git@main",
 ]
 
-requires-python = "== 3.8.15"
+requires-python = "== 3.12.3"
 
 authors = [
   {name = "Kenneth Myers", email = "myers.kenneth.james@gmail.com"},
