getting model-GBM.ipynb working on py 3.12.3 new model generated old models archived readme updates to document spark installation

--- a/.gitignore
+++ b/.gitignore
@@ -271,4 +271,4 @@ scripts/zippedLambdaFunction/*
 *reddit*.cfg
 !example_reddit.cfg
 
-model/pickledModels/latestModel.sav
+model/pickledModels/sklearn-1.0.2/latestModel.sav
