--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ dynamic = ["version"]
 
 dependencies = [
     "boto3==1.26.117",
-    "matplotlib==3.8",
     "numpy==1.26",
     "pandas==2.2.2",  # 1.3 at least needed for M1 Mac
     "pg8000==1.29.4",  # this was easier to pip install than psycopg2
@@ -18,8 +17,6 @@ dependencies = [
     "pyspark==3.4.0",
     "requests==2.31.0",
     "scikit-learn==1.4.2",
-    "seaborn==0.11.2",
-    "shap==0.41.0",
     "sqlalchemy==1.4.46",  # originally tried 2.0.10, but this was incompatible with old versions of pandas https://stackoverflow.com/a/75282604/5034651,
     "viral_reddit_posts_utils @ git+https://github.com/ViralRedditPosts/Utils.git@main",
     "Reddit-Scraping @ git+https://github.com/ViralRedditPosts/Reddit-Scraping.git@main",
@@ -48,8 +45,12 @@ build = [
     "Reddit-Model[test]"
 ]
 dev = [
+    "matplotlib==3.8",  # packages for plotting and notebook work are only needed in dev
+    "notebook==7.1.3",
     "pre-commit==2.21.0",
     "Reddit-Model[build]"
+    "seaborn==0.11.2",
+    "shap==0.45.0",
 ]
 
 [tool.setuptools.packages.find]
