--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dev = [
     "matplotlib==3.8",  # packages for plotting and notebook work are only needed in dev
     "notebook==7.1.3",
     "pre-commit==2.21.0",
-    "Reddit-Model[build]"
+    "Reddit-Model[build]",
     "seaborn==0.11.2",
     "shap==0.45.0",
 ]
